--- a/layouts/index.html
+++ b/layouts/index.html
@@ -109,7 +109,7 @@
     I am currently working on my honours thesis in causal inference. I've been able to learn a lot of
     interesting (but niche) topics thanks free notes and materials from ML researchers and university courses.
     I've tried my best to pay it forward by summerizing interesting papers and topics that I have not seen much coverage on.
-    Check out <a href="/"> the homepage </a> To see what I am currently reading and a list of all my notes!
+    Check out the <a href="/reading"> reading section </a> To see what I am currently reading and a list of all my notes!
     <br>
     <br>
     <br>
